--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spark.version>2.3.3</spark.version>
+        <spark.version>2.3.2</spark.version>
         <scala.version>2.11</scala.version>
     </properties>
 
@@ -37,6 +37,11 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-launcher_${scala.version}</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
         <dependency>
